# spec-kitty-orchestrator

./: README.md  pyproject.toml
src/spec_kitty_orchestrator/: __init__.py  executor.py  loop.py  power.py  run_lock.py  scheduler.py  workspaces.py
src/spec_kitty_orchestrator/agents/: __init__.py  letta.py  opencode.py  pi.py
src/spec_kitty_orchestrator/cli/: main.py
src/spec_kitty_orchestrator/host/: client.py  models.py
tests/: test_agent_invokers.py  test_cli_wiring.py  test_commit_lane.py  test_power.py  test_resume_orphaned.py  test_run_lock.py  test_runtime_compat.py  test_stdin_delivery.py  test_subtask_tracking.py
tests/conformance/: test_contract.py
tests/conformance/fixtures/: accept_mission_success.json  append_history_success.json  contract_version_success.json  error_mission_not_found.json  error_policy_required.json  error_transition_rejected.json  list_ready_success.json  merge_mission_success.json  mission_state_success.json  resolve_workspace_success.json  start_implementation_success.json  start_review_success.json  transition_success.json
tests/e2e/: __init__.py  conftest.py  harness.py  test_contract_smoke.py  test_fake_agent_orchestration.py  test_real_agents.py
