[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-kitty-orchestrator"
version = "0.1.0"
description = "External orchestrator for spec-kitty, integrating via the orchestrator-api contract"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.12",
]

[project.scripts]
spec-kitty-orchestrator = "spec_kitty_orchestrator.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_kitty_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: end-to-end tests that launch spec-kitty-orchestrator and spec-kitty subprocesses",
    "real_agents: tests that execute real agent CLIs instead of fake test binaries",
    "trusted_runner: tests requiring local credentials/tooling on a trusted runner",
    "slow: long-running tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
